20400
Errors could report near-misses:
```scala
import scala.io.StdIn.{readline, readInt}
```

http://stackoverflow.com/questions/42183644/scala-import-scala-io-stdin-readline-error-importing

And the deprecation message could emit the corrected line for easy cut/paste:
```scala
scala> readLine
<console>:12: warning: method readLine in trait DeprecatedPredef is deprecated (since 2.11.0): use the method in `scala.io.StdIn`
       readLine       // hint: scala.io.StdIn.readLine
       ^
res0: String = abc

scala> import scala.io.StdIn.{readline => line}
<console>:11: error: value readline is not a member of object scala.io.StdIn
       import scala.io.StdIn.{readline => line}    // hint: import scala.io.StdIn.{readLine => line}
              ^

scala> import scala.io.stdin.{readLine => line}
<console>:11: error: object stdin is not a member of package io
       import scala.io.stdin.{readLine => line}    // hint: import scala.io.StdIn.{readLine => line}
                       ^
```

